--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     </header>
 
     <div class="cta-row">
-      <a href="#" class="btn primary" id="btn-own">https://real-dogsled-d8a.notion.site/2799bf7f50958177b63adb311435ceb9</a>
-      <a href="#" class="btn secondary" id="btn-search">https://real-dogsled-d8a.notion.site/27d9bf7f509581e69834f7305376bb90?pvs=105</a>
+      <a href="https://real-dogsled-d8a.notion.site/27d9bf7f509581e69834f7305376bb90?pvs=105" class="btn primary" id="btn-own"></a>
+      <a href="https://real-dogsled-d8a.notion.site/2799bf7f50958177b63adb311435ceb9" class="btn secondary" id="btn-search"></a>
     </div>
       <img src="public/img/up_ornament.png" class="orn" alt="adorno de cabecera" onerror="this.style.display='none'"/>
     <div class="map-wrap">
@@ -99,7 +99,7 @@
       <p id="how-desc"></p>
     </section>
 
-<a href="https://real-dogsled-d8a.notion.site/27d9bf7f509581e69834f7305376bb90?pvs=105" class="btn primary big-btn">Vamos en mar</a>
+<a href="https://real-dogsled-d8a.notion.site/2799bf7f50958177b63adb311435ceb9" class="btn primary big-btn">Vamos en mar</a>
   </div>
 
   <footer>
