--- a/cap.html
+++ b/cap.html
@@ -122,7 +122,7 @@
               Pagar 990 PESOS
             </a>
 
-            <a class="btn secondary" href="#contact" aria-label="Contactar soporte">Contactar soporte</a>
+            <a class="btn secondary" href="https://real-dogsled-d8a.notion.site/27d9bf7f509581e69834f7305376bb90" aria-label="Contactar soporte">Únete como capitán!</a>
 
             <div style="font-size:13px;color:var(--muted);margin-top:6px">Al hacer clic en «Pagar» aceptas nuestra <a href="/refund-es.html" class="link">política de reembolso</a> y <a href="/terms-es.html" class="link">términos de uso</a>.</div>
           </div>
