--- a/ilb.html
+++ b/ilb.html
@@ -116,7 +116,7 @@
       border-radius: 6px;
       border: none;
       background: linear-gradient(90deg, var(--blue-deep), var(--gold));
-      color: #fff;
+      color: #1e90ff;
       font-size: 14px;
       font-weight: 600;
       cursor: pointer;
