--- a/capform.html
+++ b/capform.html
@@ -369,7 +369,7 @@
         </div>
 
         <div class="card">
-            <form id="captainRegistrationForm" action="https://formspree.io/f/mdknqkbg" method="POST">
+            <form id="captainRegistrationForm" action="https://formspree.io/f/xjgbezew" method="POST">
                 <!-- Step 1: Boat Name -->
                 <div class="form-step active" data-step="1">
                     <h2 class="step-title">Boat Name</h2>
@@ -530,14 +530,14 @@
                     
                     <div class="form-group">
                         <label>
-                            <input type="checkbox" name="terms" required>
+                            <input type="checkbox" name="notifications" value="yes" required>
                             I agree to receive notifications about new boat search requests
                         </label>
                     </div>
                     
                     <div class="form-group">
                         <label>
-                            <input type="checkbox" name="privacy" required>
+                            <input type="checkbox" name="terms_accepted" value="yes" required>
                             I have read and agree to the <a href="/terms.html" target="_blank">Terms of Service</a> and <a href="/privacy.html" target="_blank">Privacy Policy</a>
                         </label>
                     </div>
