--- a/ilb.html
+++ b/ilb.html
@@ -317,7 +317,7 @@
         </div>
 
         <div class="card">
-            <form id="boatRequestForm" action="https://formspree.io/f/mdkqbpqz" method="POST">
+            <form id="boatRequestForm" action="https://formspree.io/f/xpqajnbn" method="POST">
                 <!-- Step 1: Contact Information -->
                 <div class="form-step active" data-step="1">
                     <h2 class="step-title">Contact Information</h2>
@@ -475,7 +475,7 @@
         const finalMessage = document.getElementById('finalMessage');
         
         const quickSubmitEndpoint = 'https://formspree.io/f/xpqaaeln';
-        const fullSubmitEndpoint = 'https://formspree.io/f/mdkqbpqz';
+        const fullSubmitEndpoint = 'https://formspree.io/f/xpqajnbn';
 
         const citiesByCountry = {
             russia: ["Sochi", "Gelendzhik", "Anapa", "Vladivostok", "Kaliningrad"],
