Update Join as captain link to new URL

--- a/cap.html
+++ b/cap.html
@@ -128,7 +128,7 @@
               Pay 25 USD
             </a>
 
-            <a class="btn secondary" href="https://real-dogsled-d8a.notion.site/27d9bf7f509581e69834f7305376bb90" aria-label="Contact support">Join as captain!</a>
+            <a class="btn secondary" href="https://www.brega.app/capform" aria-label="Contact support">Join as captain!</a>
 
             <div style="font-size:13px;color:var(--muted);margin-top:6px">By clicking "Pay" you accept our <a href="/refund.html" class="link">refund policy</a> and <a href="/terms.html" class="link">terms of use</a>.</div>
           </div>
