Update button links to new URL

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
     <div class="cta-row">
       <a href="/cap" class="btn primary" id="btn-own"></a>
-      <a href="https://real-dogsled-d8a.notion.site/2799bf7f50958177b63adb311435ceb9" class="btn secondary" id="btn-search"></a>
+      <a href="https://www.brega.app/ilb" class="btn secondary" id="btn-search"></a>
     </div>
     
     <img src="public/img/up_ornament.png" class="orn" alt="adorno de cabecera" onerror="this.style.display='none'"/>
@@ -263,7 +263,7 @@
       <p id="how-desc" style="white-space: pre-line;"></p>
     </section>
 
-    <a href="https://real-dogsled-d8a.notion.site/2799bf7f50958177b63adb311435ceb9" class="btn primary big-btn" id="big-btn-text"></a>
+    <a href="https://www.brega.app/ilb" class="btn primary big-btn" id="big-btn-text"></a>
   </div>
 
   <footer>
