Update button text from 'Vamos en mar' to 'Vamos al mar'

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         seekerDesc: "Busca embarcaciones cercanas y vive aventuras en el mar.", 
         howTitle: "Cómo funciona", 
         howDesc: "1. Elige tu rol — propietario o amante del mar.\n2. Completa el formulario.\n3. Conecta directamente.\n4. Zarpa.",
-        bigBtn: "Vamos en mar",
+        bigBtn: "Vamos al mar",
         footerText: "con Mercado Pago en Uruguay",
         selectLang: "Seleccione idioma:",
         legalText: "Al hacer clic en «Pagar» aceptas nuestra <a href=\"/refund-es.html\" class=\"link\">política de reembolso</a> y <a href=\"/terms-es.html\" class=\"link\">términos de uso</a>."
